--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,9 +18,11 @@
             <div class="pure-menu">
                 <a class="pure-menu-heading" href="#">BGP模拟</a>
                 <ul class="pure-menu-list">
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">节点列表</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">发报文</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">查看拓扑</a></li>
+                    <li class="pure-menu-item"><a href="/nodes" class="pure-menu-link">节点列表</a></li>
+                    <li class="pure-menu-item"><a href="/relations" class="pure-menu-link">关系列表</a></li>
+                    <li class="pure-menu-item"><a href="/routes" class="pure-menu-link">路由列表</a></li>
+                    <li class="pure-menu-item"><a href="" class="pure-menu-link">发报文</a></li>
+                    <li class="pure-menu-item"><a href="/topo" target="_blank" class="pure-menu-link">查看拓扑</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">说明</a></li>
                 </ul>
             </div>
